--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,14 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<style>
+    body {
+        background: linear-gradient(135deg, #ff005c,   /* magenta/fucsia izquierdo */
+    #000000,   /* negro en el centro */
+    #00c8ff );
+        min-height: 100vh;
+    }
 
-<div class="container">
-    <h2>Iniciar Sesión</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-    </form>
+    .register-container {
+        max-width: 500px;
+        background-color:white;
+        border-radius: 1rem;
+        padding: 3.5rem 3rem; /* Aumenté el padding vertical */
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    .register-container form p {
+        margin-bottom: 1.5rem; 
+    }
+
+</style>
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="register-container">
+        <h2 class="text-center mb-4">Iniciar sesión</h2>
+        <p class="card-text pb-4">Ingresa a tu cuenta, y disfuta de tus eventos favoritos</p>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-dark w-100 mt-3">
+                <i class="bi bi-person-fill me-1"></i> Ingresar
+            </button>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
