--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -4,13 +4,14 @@
 
 <style>
     body {
-        background: linear-gradient(135deg, #ffecd2, #fcb69f);
-        min-height: 100vh;
+ background: linear-gradient(135deg, #ff005c,   /* magenta/fucsia izquierdo */
+    #000000,   /* negro en el centro */
+    #00c8ff );        min-height: 100vh;
     }
 
     .register-container {
         max-width: 500px;
-        background-color: #ffffff;
+        background-color:white;
         border-radius: 1rem;
         padding: 2rem;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -79,7 +80,7 @@
             </div>
 
             <!-- Botón -->
-            <button type="submit" class="btn btn-success w-100 mt-3">
+            <button type="submit" class="btn btn-dark w-100 mt-3">
                 <i class="bi bi-person-plus-fill me-1"></i> Registrarse
             </button>
         </form>
