--- a/panel_admin/templates/panel_admin/category_form.html
+++ b/panel_admin/templates/panel_admin/category_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if object %}Editar Categoría{% else %}Crear Categoría{% endif %}</h1>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Guardar</button>
