--- a/panel_admin/templates/panel_admin/event_form.html
+++ b/panel_admin/templates/panel_admin/event_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>{% if object %}Editar Evento{% else %}Crear Evento{% endif %}</h1>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Guardar</button>
