--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -67,20 +67,17 @@
 <div class="container-fluid p-0">
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'images/concierto-folkore.jpeg' %}" class="d-block w-100" alt="Concierto de Folklore">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Concierto de Folklore</h5>
-          <p>Una noche mágica con música tradicional</p>
-        </div>
+      <div class="carousel-inner">
+  {% for event in events %}
+    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+      <img src="{% if event.image %}{{ event.image.url }}{% else %}{% static 'images/foto_home.jpeg' %}{% endif %}" class="d-block w-100" alt="{{ event.title }}">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>{{ event.title }}</h5>
+        <p>{{ event.description|truncatechars:80 }}</p>
       </div>
-      <div class="carousel-item">
-        <img src="{% static 'images/concierto-jazz.jpeg' %}" class="d-block w-100" alt="Concierto de Jazz">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Concierto de Jazz</h5>
-          <p>Una tarde mágica con música tradicional</p>
-        </div>
-      </div>
+    </div>
+  {% endfor %}
+</div>
     </div>
 
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
